Fix: Sostituito @msgpack/msgpack con msgpack5

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@msgpack/msgpack@2.8.0/dist.min.js"></script>
+    <script src="https://unpkg.com/msgpack5@5.3.2/dist/msgpack5.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html> 
