--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game-container"></div>
+    <div id="game-container">
+        <div id="hud">
+            <div id="player-count">Giocatori: 1</div>
+            <div id="position">Posizione: 0,0</div>
+        </div>
+        <div id="instructions">
+            Usa i tasti WASD per muoverti
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.js"></script>
     <script src="https://unpkg.com/msgpack5@5.3.2/dist/msgpack5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html> 
