--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,14 +11,20 @@
         <div id="hud">
             <div id="player-count">Giocatori: 1</div>
             <div id="position">Posizione: 0,0</div>
+            <div id="score">Punteggio: 0</div>
+            <div id="size">Dimensione: 20</div>
         </div>
+        <div id="leaderboard"></div>
         <div id="instructions">
-            Usa i tasti WASD per muoverti
+            Usa i tasti WASD per muoverti<br>
+            Raccogli energia ⚡ per crescere<br>
+            Mangia giocatori più piccoli
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.js"></script>
     <script src="https://unpkg.com/msgpack5@5.3.2/dist/msgpack5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
 </html> 
