--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,24 +7,57 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="game-container">
-        <div id="hud">
-            <div id="player-count">Giocatori: 1</div>
-            <div id="position">Posizione: 0,0</div>
-            <div id="score">Punteggio: 0</div>
-            <div id="size">Dimensione: 20</div>
-        </div>
-        <div id="leaderboard"></div>
-        <div id="instructions">
-            Usa i tasti WASD per muoverti<br>
-            Raccogli energia ⚡ per crescere<br>
-            Mangia giocatori più piccoli
+    <div id="login-screen">
+        <h1>Brawl Legends</h1>
+        <div class="login-container">
+            <input type="text" id="username-input" placeholder="Inserisci nome giocatore" maxlength="15">
+            <button id="start-button">Inizia</button>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/pixi.js@7.2.4/dist/pixi.min.js"></script>
-    <script src="https://unpkg.com/msgpack5@5.3.2/dist/msgpack5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <script type="module" src="app.js"></script>
+
+    <div id="game-container" style="display: none;">
+        <canvas id="game-canvas"></canvas>
+        <div id="player-info">
+            <div class="player-stats">
+                <div id="player-level">Livello: 1</div>
+                <div id="player-size">Dimensione: 30</div>
+                <div id="player-score">Punteggio: 0</div>
+            </div>
+            <div id="energy-bar-container">
+                <div id="energy-bar"></div>
+                <div id="energy-text">0/100</div>
+            </div>
+        </div>
+        
+        <div id="abilities-container">
+            <div class="ability-slot" id="ability-speed">
+                <div class="ability-icon">S</div>
+                <div class="ability-name">Scatto Turbo</div>
+                <div class="ability-status">Bloccato Liv.2</div>
+                <div class="cooldown-overlay" style="height: 0%;"></div>
+            </div>
+            <div class="ability-slot" id="ability-shield">
+                <div class="ability-icon">P</div>
+                <div class="ability-name">Scudo Energetico</div>
+                <div class="ability-status">Bloccato Liv.3</div>
+                <div class="cooldown-overlay" style="height: 0%;"></div>
+            </div>
+            <div class="ability-slot" id="ability-attack">
+                <div class="ability-icon">A</div>
+                <div class="ability-name">Raggio Letale</div>
+                <div class="ability-status">Bloccato Liv.4</div>
+                <div class="cooldown-overlay" style="height: 0%;"></div>
+            </div>
+        </div>
+        
+        <div id="notifications-container"></div>
+        <div id="leaderboard-container">
+            <h3>Classifica</h3>
+            <div id="leaderboard-list"></div>
+        </div>
+    </div>
+
+    <script src="https://pixijs.download/release/pixi.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html> 
