--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -58,6 +58,6 @@
     </div>
 
     <script src="https://pixijs.download/release/pixi.min.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html> 
