--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -58,6 +58,8 @@
     </div>
 
     <script src="https://pixijs.download/release/pixi.min.js"></script>
-    <script src="app.js" type="module"></script>
+    <script src="https://unpkg.com/msgpack5@6.0.1/dist/msgpack5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html> 
