Aggiunto strumento di diagnostica debug-tools.js e collegato in index.html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -430,5 +430,8 @@
             }
         });
     </script>
+
+    <!-- Strumenti di debug -->
+    <script src="debug-tools.js"></script>
 </body>
 </html> 
